# Chronicle

./: .gitignore  .mcp.json  0418-feedback.md  0423_llm_integration_requirements.md  CLAUDE.md  LICENSE  README.md  brain_storm_round_1.md  brain_storm_round_1_reply.md  brain_storm_round_2.md  brain_storm_slack_scenarios.md  build.js  clean.js  datastore_requirements.md  dev.sh  migration_cost_comparison.md  package-lock.json  package.json  phase_3_progress_comment.md  phase_3_task_edit_area_discuss.md  phase_3_task_ui_operation_comment.md  phase_3_ui_feedback.md  plan_local_client.md  playwright.config.ts  publish.js  release-notes-1.1.0.md  release-notes-1.2.0.md  requirements.md  task_status_filter_requirements.md  tsconfig.json  user_feedback_0421.md
scripts/: generate-version.js
server/: .gitignore  package-lock.json  package.json  tsup.config.ts
server/scripts/: migrate-images.js
server/src/: cli.ts  config.ts  db.ts  index.ts  logging.ts  setup.ts  version.ts
skills/: INSTALL.md  manifest.json  package.json  send.md  write-chronicle-release-notes.md
skills/chronicle/: bind.md  check-updates.md  send.md  summarize.md
tauri/: package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
tauri/scripts/: update-version.js
tauri/src-tauri/: Cargo.toml  tauri.conf.json
tauri/src-tauri/capabilities/: default.json
tauri/src-tauri/icons/: icon.icns
tauri/src-tauri/src/: main.rs
tests/: phase4-ui.test.ts  search-done-detail.test.ts
web/: index.html  package-lock.json  package.json  vite.config.ts
web/src/: App.tsx  index.css  (+2 more)
(+34 files in other folders)
