[package]
name = "chronicle-tauri"
version = "1.1.0-20260423101333"
description = "Chronicle Desktop App"
authors = ["you"]
edition = "2021"

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-http = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
tauri-plugin-global-shortcut = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"
core-foundation = "0.10"
core-foundation-sys = "0.8"
system-idle-time = "1"

[build-dependencies]
tauri-build = { version = "2", features = [] }
